# zk-mooc-lang-examples

arkworks/: Cargo.toml
arkworks/src/: alloc.rs  circuit.rs  cmp.rs  main.rs
circom/: .gitignore  Makefile  sudoku.circom
