[package]
name = "sudoku-snark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.5" }
ark-ec = { version = "0.5" }
ark-bls12-381 = { version = "0.5" }
ark-r1cs-std = { version = "0.5" }
ark-snark = { version = "0.5" }
ark-relations = { version = "0.5" }
ark-groth16 = "0.5.0"
rand = "0.8.5"
ark-serialize = "0.5.0"

[dev-dependencies]
itertools = "0.10.1"
